Add compile flags

--- a/00_Basic/CMakeLists.txt
+++ b/00_Basic/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(0_Basic LANGUAGES CXX)
+project(00_Basic LANGUAGES CXX)
 
 find_package(Vulkan REQUIRED)
 
@@ -15,6 +15,13 @@ set_target_properties(
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED YES
         CXX_EXTENSIONS NO
+)
+
+target_compile_options(
+    ${PROJECT_NAME}
+    PRIVATE
+         $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
+         $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>
 )
 
 target_link_libraries(
