--- a/01_Window/CMakeLists.txt
+++ b/01_Window/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(1_Window LANGUAGES CXX)
+project(01_Window LANGUAGES CXX)
 
 find_package(glfw3 REQUIRED)
 find_package(Vulkan REQUIRED)
@@ -20,6 +20,13 @@ set_target_properties(
         CXX_STANDARD 17
         CXX_STANDARD_REQUIRED YES
         CXX_EXTENSIONS NO
+)
+
+target_compile_options(
+    ${PROJECT_NAME}
+    PRIVATE
+         $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
+         $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>
 )
 
 target_link_libraries(
