--- a/19_UniformBuffers/CMakeLists.txt
+++ b/19_UniformBuffers/CMakeLists.txt
@@ -85,6 +85,13 @@ set_target_properties(
         CXX_EXTENSIONS NO
 )
 
+target_compile_options(
+    ${PROJECT_NAME}
+    PRIVATE
+         $<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
+         $<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>
+)
+
 target_include_directories(
     ${PROJECT_NAME}
     PRIVATE
